# solidity-analyzer

./: .gitignore  Cargo.toml  README.md  bump-versions.sh  clippy.toml
.github/actions/rust-job/: action.yml
.github/workflows/: ci.yml  publish-marketplaces.yml  release-check.yml  release.yml  rust-job.yml
crates/sa-base-db/: Cargo.toml
crates/sa-base-db/src/: lib.rs
crates/sa-config/: Cargo.toml
crates/sa-config/src/: formatting.rs  lib.rs
crates/sa-config/tests/: compiler_settings.rs  formatting.rs
crates/sa-def/: Cargo.toml
crates/sa-def/src/: lib.rs
crates/sa-flycheck/: Cargo.toml
crates/sa-flycheck/src/: lib.rs
crates/sa-flycheck/tests/: flycheck_basic.rs  solc_input_parity.rs
crates/sa-hir/: Cargo.toml
crates/sa-hir/src/: lib.rs  locals.rs
crates/sa-hir/tests/: exports.rs  hir_program.rs  hir_queries.rs  local_references.rs  local_scopes.rs  source_to_def.rs
crates/sa-ide/: Cargo.toml
crates/sa-ide-assists/: Cargo.toml
crates/sa-ide-assists/src/: lib.rs  lint_fixes.rs
crates/sa-ide-completion/: Cargo.toml
crates/sa-ide-completion/src/: lib.rs
crates/sa-ide-completion/tests/: completions.rs
crates/sa-ide-db/: Cargo.toml
crates/sa-ide-db/src/: lib.rs
crates/sa-ide-db/tests/: symbols.rs
crates/sa-ide-diagnostics/: Cargo.toml
crates/sa-ide-diagnostics/src/: lib.rs
crates/sa-ide-diagnostics/tests/: fixable_lints.rs  import_resolution.rs  inline_config.rs  merge.rs  solar_errors.rs
crates/sa-ide/src/: code_actions.rs  completion.rs  formatting.rs  hover.rs  lib.rs  rename.rs  signature_help.rs  symbols.rs  syntax_outline.rs  syntax_utils.rs
crates/sa-ide/tests/: code_actions.rs  document_symbols.rs  formatting.rs  hover.rs  hover_inheritdoc.rs  natspec_docs.rs  natspec_links.rs  references.rs  rename.rs  semantics.rs  signature_help.rs  syntax_outline.rs  workspace_symbols.rs
crates/sa-intern/: Cargo.toml
crates/sa-intern/src/: lib.rs
crates/sa-load-foundry/: Cargo.toml
crates/sa-load-foundry/src/: lib.rs
crates/sa-load-foundry/tests/: parity.rs  profile_selection.rs
crates/sa-paths/: Cargo.toml
crates/sa-paths/src/: lib.rs
crates/sa-project-model/: Cargo.toml
crates/sa-project-model/src/: lib.rs
crates/sa-project-model/tests/: remapping_context.rs  resolver_adapter.rs  workspace_resolution.rs
crates/sa-sema/: Cargo.toml
crates/sa-sema/src/: completion.rs  contract_members.rs  exports.rs  lib.rs  references.rs  resolve.rs  symbols.rs  ty_utils.rs
crates/sa-sema/tests/: completion.rs  references.rs  resolve.rs  snapshot.rs
crates/sa-span/: Cargo.toml
crates/sa-span/src/: lib.rs
crates/sa-syntax/: Cargo.toml
crates/sa-syntax/src/: ast_utils.rs  lib.rs  parse.rs  tokens.rs
crates/sa-syntax/tests/: fixtures.rs
crates/sa-test-support/: Cargo.toml
crates/sa-test-support/src/: lib.rs  lsp.rs
crates/sa-test-utils/: Cargo.toml
crates/sa-test-utils/src/: lib.rs  toolchain.rs
crates/sa-test-utils/test_data/solc/: solc-output-empty.json  solc-output-error.json
crates/sa-test-utils/tests/: fixture_loader.rs  slow_tests.rs
crates/sa-toolchain/: Cargo.toml
crates/sa-toolchain/src/: lib.rs
crates/sa-toolchain/tests/: auto_detect.rs  common.rs  resolve.rs
crates/sa-vfs/: Cargo.toml
crates/sa-vfs/src/: lib.rs
crates/solidity-analyzer/: Cargo.toml
crates/solidity-analyzer/src/: config.rs  diagnostics.rs  document.rs  indexer.rs  lib.rs  lsp_ext.rs  lsp_utils.rs  main.rs  profile.rs  server.rs  state.rs  status.rs  task_pool.rs  workspace.rs
crates/solidity-analyzer/src/handlers/: code_action.rs  completion.rs  definition.rs  did_save.rs  document_symbols.rs  formatting.rs  hover.rs  mod.rs  references.rs  rename.rs  signature_help.rs  utils.rs  workspace_symbols.rs
crates/solidity-analyzer/tests/: cancellation.rs  code_actions.rs  completion.rs  diagnostics_on_change.rs  diagnostics_publish.rs  document_symbols.rs  document_sync.rs  format_on_save.rs  formatting.rs  goto_definition.rs  hover_signature_help.rs  import_parity.rs  indexed_files_command.rs  initialize.rs  lsp_harness.rs  on_save_hooks.rs  references.rs  rename.rs  server_shutdown.rs  server_status.rs  solc_install_command.rs  startup_status.rs  test_fixtures.rs  workspace_load.rs  workspace_symbols.rs
editors/code/: .prettierrc  .vscodeignore  CONTRIBUTING.md  README.md  eslint.config.mjs  package.json  tsconfig.json
editors/code/scripts/: link-server.js  package-linux.sh  package-windows.ps1  package.js  publish.js
editors/code/src/: bootstrap.ts  client.ts  commandIds.ts  commands.ts  config.ts  constants.ts  ctx.ts  lsp_ext.ts  main.ts  statusBar.ts
editors/code/syntaxes/: solidity.tmLanguage.json
editors/code/tests/: runTests.ts
editors/code/tests/fixtures/foundry/: foundry.toml
editors/code/tests/integration/: activate.test.ts  index.ts
editors/code/tests/unit/: bootstrap.test.ts  ci.test.ts  client.test.ts  client_capabilities.test.ts  command_ownership.test.ts  commands.test.ts  commands_surface.test.ts  diagnostics_settings.test.ts  feature_settings.test.ts  format_lint_commands.test.ts  format_lint_settings.test.ts  helpers.ts  manifest.test.ts  package_scripts.test.ts  publish.test.ts  settings.test.ts  status_bar.test.ts
scripts/: build-macos.sh  build-windows.ps1  test-linux.sh  test-macos.sh  test-windows.ps1
xtask/: Cargo.toml
xtask/fixtures/: codegen-output.txt
xtask/src/: codegen.rs  dist.rs  ext.rs  lib.rs  main.rs  profile.rs
xtask/tests/: build_scripts.rs  cli.rs  codegen.rs  workspace_members.rs
