[workspace]
resolver = "2"
members = [
    "crates/sa-base-db",
    "crates/sa-vfs",
    "crates/sa-project-model",
    "crates/sa-ide",
    "crates/sa-ide-db",
    "crates/sa-ide-assists",
    "crates/sa-ide-completion",
    "crates/sa-ide-diagnostics",
    "crates/sa-sema",
    "crates/sa-toolchain",
    "crates/sa-load-foundry",
    "crates/sa-config",
    "crates/sa-paths",
    "crates/sa-intern",
    "crates/sa-span",
    "crates/sa-test-support",
    "crates/sa-test-utils",
    "crates/sa-hir",
    "crates/sa-def",
    "crates/sa-syntax",
    "crates/sa-flycheck",
    "crates/solidity-analyzer",
    "xtask",
]

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "GPL-3.0-only"

[workspace.dependencies]
forge-fmt = { git = "https://github.com/foundry-rs/foundry.git", rev = "3a0f1e8aa4be100aa913e8ea479b5f416325e4fa" }
forge-lint = { git = "https://github.com/foundry-rs/foundry.git", rev = "3a0f1e8aa4be100aa913e8ea479b5f416325e4fa" }
foundry-common = { git = "https://github.com/foundry-rs/foundry.git", rev = "3a0f1e8aa4be100aa913e8ea479b5f416325e4fa" }
foundry-config = { git = "https://github.com/foundry-rs/foundry.git", rev = "3a0f1e8aa4be100aa913e8ea479b5f416325e4fa" }
solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13", default-features = false }
solar-ast = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
solar-config = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
solar-data-structures = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
solar-interface = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
solar-macros = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
solar-parse = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
solar-sema = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }

[patch.crates-io]
solar-ast = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
solar-compiler = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
solar-config = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
solar-data-structures = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
solar-interface = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
solar-macros = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
solar-parse = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
solar-sema = { git = "https://github.com/paradigmxyz/solar", rev = "489f9f2bc95597742350a3c1b9a34e1c607a8a13" }
