[package]
name = "sa-flycheck"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
foundry-compilers = { version = "0.19", default-features = false, features = ["rustls", "svm-solc"] }
sa-config = { path = "../sa-config" }
sa-paths = { path = "../sa-paths" }
sa-project-model = { path = "../sa-project-model" }
sa-span = { path = "../sa-span" }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tracing = "0.1"

[dev-dependencies]
foundry-config = { workspace = true }
sa-test-support = { path = "../sa-test-support" }
sa-test-utils = { path = "../sa-test-utils" }
serde_json = "1"
tempfile = "3"

[lib]
path = "src/lib.rs"
