[package]
name = "sa-load-foundry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
foundry-config = { workspace = true }
foundry-compilers = { version = "0.19", default-features = false, features = ["rustls", "svm-solc"] }
sa-config = { path = "../sa-config" }
sa-paths = { path = "../sa-paths" }
sa-project-model = { path = "../sa-project-model" }

[dev-dependencies]
sa-test-support = { path = "../sa-test-support" }
sa-test-utils = { path = "../sa-test-utils" }
tempfile = "3"

[lib]
path = "src/lib.rs"
