[package]
name = "sa-test-support"
version = "0.1.4"
edition = "2024"

[dependencies]
futures = "0.3"
sa-base-db = { path = "../sa-base-db" }
sa-config = { path = "../sa-config" }
sa-ide = { path = "../sa-ide" }
sa-paths = { path = "../sa-paths" }
sa-project-model = { path = "../sa-project-model" }
sa-span = { path = "../sa-span" }
sa-vfs = { path = "../sa-vfs" }
serde = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tower = { version = "0.4", features = ["util"] }
tower-lsp = "0.20"
