[package]
name = "solidity-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
sa-ide = { path = "../sa-ide" }
sa-ide-diagnostics = { path = "../sa-ide-diagnostics" }
sa-load-foundry = { path = "../sa-load-foundry" }
sa-flycheck = { path = "../sa-flycheck" }
sa-config = { path = "../sa-config" }
sa-def = { path = "../sa-def" }
sa-paths = { path = "../sa-paths" }
sa-project-model = { path = "../sa-project-model" }
sa-span = { path = "../sa-span" }
sa-syntax = { path = "../sa-syntax" }
sa-vfs = { path = "../sa-vfs" }
sa-toolchain = { path = "../sa-toolchain" }
foundry-compilers = { version = "0.19", default-features = false, features = ["rustls", "svm-solc"] }
salsa = "0.25"
anyhow = "1"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "signal", "time"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "solidity-analyzer"
path = "src/main.rs"

[dev-dependencies]
sa-test-support = { path = "../sa-test-support" }
sa-test-utils = { path = "../sa-test-utils" }
tempfile = "3"
tower = { version = "0.4", features = ["buffer", "util"] }
